# vine

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MYPY_CLEANUP.md  Makefile  README.md  SEEDLING_TEST_CHECKLIST.md  TEST_CLEANUP.md  TEST_QUALITY.md  UPGRADING_QUALITY.md  collect_verbose.txt  collected.txt  copier.yml  nonstandard_classes.txt  nonstandard_functions.txt  noxfile.py  pyproject.toml  pytest.ini  section_13_plan.md  section_15_publish_checklist.md  seedling_checklist.md  test-data.yaml  test-data.yml
.agent-os/examples/: movepy.md
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/: defaults-management-spec.md  phase1-core-architecture.md  pydantic-models-spec.md  registry-system-spec.md  timeline-builder-spec.md
.cursor/rules/: agent-os.mdc  model-cleanup.mdc  stuffit.mdc  testing-rules.mdc
.github/: quality-gates.yml
.github/workflows/: ci.yml  ci_nox.yml  docs.yml  release.yml
docs/: ARCHITECTURE_PATTERNS.md  Makefile  NO_PATCH_RULE.md  PROJECT_SUMMARY.md  QUALITY_GATES.md  STATUS.md  VINE_FRAMEWORK_GUIDE.md  build-docs.sh  pyproject.toml  template-guide.md  test-utilities-rationale.md  timing-mode-usage-patterns.md
docs/adr/: 0001-audio-track-refactor.md  0001-template-design.md  0002-shorts-video-summary.md  0002-technology-stack.md
docs/architectural-issues/: image-text-timing.md
docs/maintenance-tasks/: README.md  TEST_CLEANUP-completed.md  UPGRADING_QUALITY-completed.md  makefile_refactor_checklist.md
docs/mypy/: README.md  call_arg_fix_plan.md  current_status_summary.md  mypy_audit_report.md  mypy_incremental_strict_plan.md  mypy_strict_progress.md
docs/mypy/audit_reports/: ignore_missing_imports_audit.md  tests_overrides_audit.md  type_ignore_cleanup_audit.md  yaml_hardening_audit.md
docs/mypy/error_categories/: arg-type.md  assignment.md  check-untyped-defs.md  no-implicit-optional.md  no-return.md  no-untyped-def.md  phase3_audit_report.md  return-value.md  strict-equality.md
docs/mypy/stub_coverage/: moviepy.md
docs/planning/: API_SPECIFICATION.md  ARCHITECTURE_DESIGN.md  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.md  overview.md  project_vine___vine_media_framework_2025-07-27.md
docs/source/: api.md  api.rst  conf.py  configuration.md  contributing.md  contributing.rst  dependency-groups.md  dependency-groups.rst  examples.md  examples.rst  index.md  index.rst  installation.md  quickstart.md
docs/source/_static/: .gitkeep  README.md
docs/source/_templates/: .gitkeep  README.md
docs/source/adr/: 0001-template-design.md  0003-architecture-decisions.md  index.md
docs/source/advanced/: customization.md  documentation.md  extending.md  troubleshooting.md
docs/source/features/: ci-cd.md  development.md  documentation.md  quality-tooling.md  testing.md
docs/source/reference/: post-generation.md  template-structure.md
examples/: README_shorts_video.md  audio_track_demo.py  basic_models_example.py  batch_duration_demo.py  create_shorts_video.py  export_example.py  google_style_api_demo.py  google_style_effects_demo.py  motivational_short.py  simple_shorts_video.py  timeline_builder_example.py  track_based_example.py  transition_demo.py  transition_progress_demo.py  vine_framework_demo.py
examples/assets/shorts/: test_output.json
output/: audio_mixing_spec.json  effects_demo_spec.json  explicit_timing_spec.json  sequential_demo_spec.json  simple_video_spec.json  video_spec.json
scripts/: add_fixture_return_types.py  add_mock_typing.py  add_return_annotations.py  add_test_return_types.py  analyze_patch_usage.py  check_coverage.py  check_no_patch.py  fix_important_test_errors.py  fix_imports.py  fix_mock_typing.py  fix_test_imports.py  install-tools.sh  quality_gates.py  remove_patch_usage.py  remove_test_wrappers.py  run_benchmarks.py  run_tests_with_seed.py  test-ci.sh
scripts/benchmarks/: __init__.py  conftest.py
seedling/: .gitignore  .pre-commit-config.yaml.jinja  .python-version  CONTRIBUTING.md.jinja  README.md.jinja  SECURITY.md.jinja  justfile.jinja  noxfile.py.jinja  pyproject.toml.jinja  pyrightconfig.json.jinja  pytest.ini.jinja
seedling/.cursor/rules/: agent-os.mdc.jinja  model-cleanup.mdc.jinja  stuffit.mdc.jinja  testing-rules.mdc.jinja
seedling/.github/: dependabot.yml.jinja
seedling/.github/workflows/: ci_nox.yml.jinja  codeql.yml.jinja  commitizen.yml.jinja  docs.yml.jinja  release.yml.jinja  static.yml.jinja
seedling/docs/: template-guide.md.jinja
seedling/docs/adr/: 0001-template-design.md.jinja
seedling/docs/source/: api.md.jinja  conf.py.jinja  contributing.md.jinja  dependency-groups.md.jinja  index.md.jinja
seedling/src/{{ project_slug }}/: __init__.py.jinja
seedling/tests/unit/: test_example.py.jinja
src/my_awesome_project/: example.py
src/vine/: __init__.py  _version.py  py.typed
src/vine/builder/: __init__.py  timeline_builder.py
src/vine/defaults/: __init__.py  defaults_manager.py
src/vine/models/: __init__.py  animation_config.py  audio_config.py  base.py  clip_params.py  contexts.py  effects.py  protocols.py  timeline_block.py  tracks.py  transition.py  transition_config.py  transitions.py  video_spec.py  yaml_models.py
src/vine/registry/: __init__.py  animation_registry.py  base_registry.py  effect_registry.py  transition_registry.py
src/vine/rendering/: __init__.py  audio_renderer.py  base_renderer.py  clip_factory.py  moviepy_adapter.py  text_renderer.py  video_renderer.py
src/vine/utils/: __init__.py  yaml_utils.py
stubs/moviepy/: __init__.pyi
tests/: conftest.py  test_basic.py
tests/unit/: test_animation_config.py  test_audio_config.py  test_effects.py  test_registry.py  test_rendering.py  test_timeline_block.py  test_timeline_builder_comprehensive.py  test_timeline_builder_coverage.py  test_timeline_builder_edge_cases.py  test_timeline_builder_tracks.py  test_tracks.py  test_transition_config.py  test_transitions.py  test_video_spec.py  test_video_spec_tracks.py  test_yaml_utils.py
tests/vine/: __init__.py
vine/defaults/: __init__.py
(+7 files in other folders)
